# Copyright 2024 Canonical Ltd.
# See LICENSE file for licensing details.

[tool.poetry]
name = "spark-k8s-test"
version = "0.0.2a0"
description = "This project provides some utilities function and CLI commands to test Charmed Spark on K8s."
authors = [
  "Canonical Data Platform <data-platform@lists.launchpad.net>",
]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "spark_test" }]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.9"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
spark8t = ">=0.0.10"
boto3 = ">=1.34.55"
pytest = ">=6.2"
azure-storage-blob = "^12.21.0"
pyhive = { extras = ["hive_pure_sasl"], version = "^0.7.0" }
lightkube = ">=0.11"

[tool.poetry.group.fmt]
optional = true

[tool.poetry.group.fmt.dependencies]
ruff = "^0.9.4"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
codespell = "^2.1.0"
ruff = "^0.9.4"
mypy = ">=0.910"
pytest-mypy = ">=0.10.3"

[tool.poetry.group.unit]
optional = true

[tool.poetry.group.unit.dependencies]
pytest-cov = ">=3.0"
pytest-mock = ">=3.10"
parameterized = ">=0.9.0"

[tool.poetry.group.integration]
optional = true

[tool.poetry.group.integration.dependencies]
pytest-cov = ">=3.0"
pytest-mock = ">=3.10"
parameterized = ">=0.9.0"
juju = ">=3.4.0"
pytest-operator = ">0.20"
psycopg2-binary = "^2.9.9"
tenacity = "^9.0.0"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--doctest-modules --cov=./spark_test"

[tool.ruff]
extend-exclude = ["__pycache__", "*.egg_info"]
target-version = "py38"
src = ["spark_test", "tests"]

[tool.ruff.lint]
select = ["B", "C", "D", "E", "F", "W", "B9", "I"]
ignore = ["E501", "D107", "F811"]
extend-ignore = [
  # Ignored by black
  "E203",
  "E266",
  "E501",
  # Ignored to conform to PEP257
  "D203",
  "D212",
  "D213",
  "D214",
  "D215",
  "D404",
  "D405",
  "D406",
  "D407",
  "D408",
  "D409",
  "D410",
  "D411",
  "D413",
  "D415",
  "D416",
  "D417",
]
per-file-ignores = { "__init__.py" = ["F401"], "tests/*" = ["D"], "tests/test_utils.py" = ["F601"] }
mccabe.max-complexity = 18

[tool.ruff.lint.isort]
known-first-party = ["spark_test", "tests"]

[tool.mypy]
follow_imports = "silent"

[[tool.mypy.overrides]]
module = [
  "parameterized",
  "envyaml",
  "pytest",
]
ignore_missing_imports = true
