# Copyright 2024 Canonical Ltd.
# See LICENSE file for licensing details.

[tool.poetry]
name = "spark-k8s-test"
version = "0.0.4"
description = "This project provides some utilities function and CLI commands to test Charmed Spark on K8s."
authors = [
  "Canonical Data Platform <data-platform@lists.launchpad.net>",
]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "spark_test" }]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.9"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
spark8t = ">=0.0.12"
boto3 = ">=1.40.49"
pytest = ">=6.2.5"
azure-storage-blob = "^12.26.0"
lightkube = ">=0.17.2"
impyla = "^0.22.0"

[tool.poetry.group.fmt]
optional = true

[tool.poetry.group.fmt.dependencies]
ruff = "^0.14.0"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
codespell = "^2.4.1"
ruff = "^0.14.0"
mypy = ">=0.991"
pytest-mypy = ">=1.0.1"
types-boto3 = { extras = ["essentials"], version = ">=1.40.49" }
types-psycopg2 = "^2.9.21.20250718"
types-pyyaml = "^6.0.12.20250516"

[tool.poetry.group.unit]
optional = true

[tool.poetry.group.unit.dependencies]
pytest-cov = ">=7.0.0"
pytest-mock = ">=3.15.1"

[tool.poetry.group.integration]
optional = true

[tool.poetry.group.integration.dependencies]
pytest-cov = ">=7.0.0"
pytest-mock = ">=3.15.1"
psycopg2-binary = "^2.9.10"
tenacity = "^9.1.2"
httpx = "^0.28.1"
jubilant = "^1.5.0"
jinja2 = "*"

[tool.poetry.group.benchmark]
optional = true

[tool.poetry.group.benchmark.dependencies]
great-tables = "^0.19.0"
polars = "^1.34.0"
pandas = "^2.3.3" # needed for great-tables' nanoplot

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--doctest-modules --cov=./spark_test"
log_cli_level = "INFO"
asyncio_mode = "auto"

[tool.ruff]
extend-exclude = ["__pycache__", "*.egg_info"]
target-version = "py310"
src = ["spark_test", "tests"]

[tool.ruff.lint]
select = ["B", "C", "D", "E", "F", "W", "B9", "I"]
ignore = ["E501", "D107", "F811"]
extend-ignore = [
  # Ignored by black
  "E203",
  "E266",
  "E501",
  # Ignored to conform to PEP257
  "D203",
  "D212",
  "D213",
  "D214",
  "D215",
  "D404",
  "D405",
  "D406",
  "D407",
  "D408",
  "D409",
  "D410",
  "D411",
  "D413",
  "D415",
  "D416",
  "D417",
]
per-file-ignores = { "__init__.py" = ["F401"], "tests/*" = ["D"], "tests/test_utils.py" = ["F601"] }
mccabe.max-complexity = 18

[tool.ruff.lint.isort]
known-first-party = ["spark_test", "tests"]

[tool.mypy]
follow_imports = "silent"

[[tool.mypy.overrides]]
module = [
  "envyaml",
  "pytest",
  "spark8t.domain",
  "spark8t.services",
  "spark8t.utils",
  "impala.dbapi",
  "impala.hiveserver2",
  "pyspark.sql",
  "pyspark.sql.types",
]
ignore_missing_imports = true
